chore: html finalization

--- a/index.html
+++ b/index.html
@@ -75,8 +75,59 @@
         <a href="#">Saiba mais</a>
     </section>
 
+    <section>
+        <div>
+            <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
+            <div>
+                <h2>Botafogo</h2>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+                </p>
+                <a href="#">Ver mapa</a>
+            </div>
+        </div>
 
+        <div> 
+            <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
+            <div>
+                <h2>Iguatemi</h2>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+                </p>
+                <a href="#">Ver mapa</a>
+            </div>
+        </div>
 
-    
+        <div>
+            <img src="img/mineirao.jpg" alt="Brafé unidade Mineirão">
+            <div>
+                <h2>Mineirão</h2>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+                </p>
+                <a href="#">Ver mapa</a>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <div>
+                <h2>Assino nossa newsletter</h2>
+                    <p>Promoções e eventos mensais</p>
+            </div>
+
+            <form>
+                <label>E-mail</label>
+                <input type="text" placeholder="Digite seu e-mail">
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div>
+            <p>Este é um projeto do curso de CSS - Posicionamento avançado da Origamid.<br>
+            Praia ALi perto, 000, São Paulo.</p>
+            <img src="img/brafe.png" alt="Brafé">
+        </div>
+    </footer>
 </body>
 </html>
