--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="./style.css/style.css">
-
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
-    <header>
-        <div>
-            <a href="#"><img src="img/brafe.png alt="Brafé"></a>
+    <header class="menu">
+        <div class="menu-container">
+            <a class="menu-logo" href="#"><img src="img/brafe.png" alt="Brafé"></a>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+         </nav>
         </div>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </nav>
+    </header>   
 
     <main>
         <h1>Cafés com a cara<br>do Brasil</h1>
