chore: about styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     
 </head>
 <body>
@@ -26,15 +26,15 @@
             <p>Direto das fazendas de Minas Gerais</p>
     </main>
 
-    <section>
+    <section class="sobre">
         <h2>Uma mistura de</h2>
-        <div>
-            <div>
+        <div class="sobre-container">
+            <div class="sobre-item">
                 <img src="img/cafe-1.jpg" alt="Café 1">
                 <h3>amor</h3>
             </div>
 
-            <div>
+            <div class="sobre-item">
                 <img src="img/cafe-2.jpg" alt="Café 2">
                 <h3>perfeição</h3>
             </div>
