--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
         </p>
     </section>
 
-    <section>
-        <div>
-            <div>
-                <h2>Paulista</h2>
+    <section class="produtos">
+        <div class="produtos-container">
+            <div class="produtos-item">
+                <h2 class="produtos-paulista">Paulista</h2>
                     <p>
                         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras
                         regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
                     </p>
             </div>
-            <div>
-                <h2>Caioca</h2>
+            <div class="produtos-item">
+                <h2 class="produtos-carioca">Carioca</h2>
                 <p>
                     <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras
                     regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
                 </p>
             </div>
-            <div>
-                <h2>Mineiro</h2>
+            <div class="produtos-item">
+                <h2 class="produtos-mineiro">Mineiro</h2>
                 <p>
                     <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo noutras
                     regiões: o João Alberto Castelo Branco trouxe mudas do Pará</p>
                 </p>
             </div>
         </div>
-        <a href="#">Saiba mais</a>
+        <a class="produtos-btn" href="#">Saiba mais</a>
     </section>
 
     <section>
