chore: locations styling

--- a/index.html
+++ b/index.html
@@ -74,32 +74,32 @@
         <a class="produtos-btn" href="#">Saiba mais</a>
     </section>
 
-    <section>
-        <div>
+    <section class="locais">
+        <div class="locais-item">
             <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo">
             <div>
                 <h2>Botafogo</h2>
-                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.
                 </p>
                 <a href="#">Ver mapa</a>
             </div>
         </div>
 
-        <div> 
+        <div class="locais-item"> 
             <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi">
             <div>
                 <h2>Iguatemi</h2>
-                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.
                 </p>
                 <a href="#">Ver mapa</a>
             </div>
         </div>
 
-        <div>
+        <div class="locais-item">
             <img src="img/mineirao.jpg" alt="Brafé unidade Mineirão">
             <div>
                 <h2>Mineirão</h2>
-                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
+                <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.
                 </p>
                 <a href="#">Ver mapa</a>
             </div>
