chore: footer styling

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
         </div>
     </section>
 
-    <section>
-        <div>
-            <div>
-                <h2>Assino nossa newsletter</h2>
+    <section class="assine">
+        <div class="assine-container">
+            <div class="assine-info">
+                <h2>Assine nossa newsletter</h2>
                     <p>Promoções e eventos mensais</p>
             </div>
 
@@ -121,8 +121,8 @@
         </div>
     </section>
 
-    <footer>
-        <div>
+    <footer class="footer">
+        <div class="footer-container">
             <p>Este é um projeto do curso de CSS - Posicionamento avançado da Origamid.<br>
             Praia ALi perto, 000, São Paulo.</p>
             <img src="img/brafe.png" alt="Brafé">
